--- a/ChatonsBDD/Views/Shared/_Layout.cshtml
+++ b/ChatonsBDD/Views/Shared/_Layout.cshtml
@@ -27,6 +27,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TestAction">Test Action</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Chatons" asp-action="Index">Chatons</a>
+                        </li>
                     </ul>
                 </div>
             </div>
